--- a/.travis.yml
+++ b/.travis.yml
@@ -52,20 +52,20 @@ before_script:
 # Dependency
 - git clone https://github.com/shadowsocks/openwrt-feeds.git package/feeds
 # Shadowsocks
-- git clone https://github.com/shadowsocks/luci-app-shadowsocks.git package/luci-app-shadowsocks
-- git clone https://github.com/shadowsocks/openwrt-shadowsocks.git package/shadowsocks-libev
-- git clone https://github.com/aa65535/openwrt-simple-obfs.git package/simple-obfs
+- git clone https://github.com/shadowsocks/luci-app-shadowsocks package/luci-app-shadowsocks
+- git clone https://github.com/shadowsocks/openwrt-shadowsocks package/shadowsocks-libev
+- git clone https://github.com/aa65535/openwrt-simple-obfs package/simple-obfs
 # ShadowsocksR
-- git clone https://github.com/ywb94/openwrt-ssr.git package/openwrt-ssr
+- git clone https://github.com/ywb94/openwrt-ssr package/openwrt-ssr
 # Misc
-- git clone https://github.com/aa65535/openwrt-chinadns.git package/chinadns
-- git clone https://github.com/aa65535/openwrt-dns-forwarder.git package/dns-forwarder
-- git clone https://github.com/aa65535/openwrt-dist-luci.git package/openwrt-dist-luci
-- git clone https://github.com/aa65535/openwrt-autossh.git package/autossh
+- git clone https://github.com/aa65535/openwrt-chinadns package/chinadns
+- git clone https://github.com/aa65535/openwrt-dns-forwarder package/dns-forwarder
+- git clone https://github.com/aa65535/openwrt-dist-luci package/openwrt-dist-luci
+- git clone https://github.com/aa65535/openwrt-autossh package/autossh
 - git clone https://github.com/LuttyYang/luci-theme-material package/luci-theme-material
 # Pdnsd
-- git clone https://github.com/licess/openwrt-pdnsd.git package/pdnsd
-- git clone https://github.com/AlexZhuo/luci-app-pdnsd.git package/luci-app-pdnsd
+- git clone https://github.com/licess/openwrt-pdnsd package/pdnsd
+- git clone https://github.com/AlexZhuo/luci-app-pdnsd package/luci-app-pdnsd
 # Vlmcsd
 - git clone https://github.com/mchome/openwrt-vlmcsd package/vlmcsd
 - git clone https://github.com/mchome/luci-app-vlmcsd package/luci-app-vlmcsd
@@ -73,6 +73,7 @@ before_script:
 - svn co https://github.com/tsl0922/ttyd/trunk/openwrt package/ttyd
 - svn co https://github.com/openwrt/packages/trunk/libs/libwebsockets package/libwebsockets
 - sed -i 's/$(eval $(call BuildPackage,libwebsockets-cyassl))/#\0/' package/libwebsockets/Makefile
+- svn co https://github.com/openwrt/packages/trunk/libs/libuv package/libuv
 script:
 - make prereq
 - make -k V=s
