--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,7 @@ env:
 - SDK_URL=https://downloads.lede-project.org/releases/17.01.4/targets/mediatek/generic/lede-sdk-17.01.4-mediatek_gcc-5.4.0_musl-1.1.16_eabi.Linux-x86_64.tar.xz
 - SDK_URL=https://downloads.lede-project.org/releases/17.01.4/targets/ramips/mt7621/lede-sdk-17.01.4-ramips-mt7621_gcc-5.4.0_musl-1.1.16.Linux-x86_64.tar.xz
 install:
-- export TAG=$(sed -n 's/.*lede-sdk-17.01.4-\(.*\)_gcc.*/\1/p' <<< $SDK_URL | awk -F- '{print $1}')
+- export TAG=$(sed -n 's/.*lede-sdk-17.01.4-\(.*\)_gcc.*/\1/p' <<< $SDK_URL)
 - wget $SDK_URL
 - tar xf $(basename $SDK_URL)
 - cd *$TAG*
