--- a/.travis.yml
+++ b/.travis.yml
@@ -17,8 +17,7 @@ addons:
     - libudns-dev
     - libstdc++-4.9-dev
 env:
-- SDK_URL=https://downloads.lede-project.org/releases/17.01.4/targets/ar71xx/nand/lede-sdk-17.01.4-ar71xx-nand_gcc-5.4.0_musl-1.1.16.Linux-x86_64.tar.xz
-- SDK_URL=https://downloads.lede-project.org/releases/17.01.4/targets/ramips/mt7621/lede-sdk-17.01.4-ramips-mt7621_gcc-5.4.0_musl-1.1.16.Linux-x86_64.tar.xz
+- SDK_URL=https://downloads.openwrt.org/releases/17.01.4/targets/ar71xx/nand/lede-sdk-17.01.4-ar71xx-nand_gcc-5.4.0_musl-1.1.16.Linux-x86_64.tar.xz
 install:
 - export TAG=$(sed -n 's/.*lede-sdk-17.01.4-\(.*\)_gcc.*/\1/p' <<< $SDK_URL | awk -F- '{print $1}')
 - wget $SDK_URL
@@ -68,4 +67,4 @@ after_success:
 - git config user.email "bot@github.com"
 - git add .
 - git commit -m "$TAG"
-- git push --force --quiet "https://${GitHub_Token}@github.com/simonsmh/lede-dist.git" HEAD:$TAG
+- git push --force --quiet "https://${GitHub_Token}@github.com/simonsmh/openwrt-dist.git" HEAD:$TAG
