--- a/.travis.yml
+++ b/.travis.yml
@@ -62,7 +62,7 @@ script:
 - make package/luci-app-pdnsd/compile V=s
 - make package/vlmcsd/compile V=s
 - make package/luci-app-vlmcsd/compile V=s
-- make package/luci-app-transparent-proxy/compile V=s
+# make package/luci-app-transparent-proxy/compile V=s
 - make package/luci-app-nfs/compile V=s
 # Generate packages.gz
 - ./staging_dir/host/bin/usign -G -s ./key-build -p ./key-build.pub -c "Local build key"
