--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,7 @@ env:
 - SDK_URL=https://downloads.openwrt.org/releases/17.01.4/targets/ar71xx/nand/lede-sdk-17.01.4-ar71xx-nand_gcc-5.4.0_musl-1.1.16.Linux-x86_64.tar.xz
 - SDK_URL=https://downloads.openwrt.org/snapshots/targets/ramips/mt7621/openwrt-sdk-ramips-mt7621_gcc-7.3.0_musl.Linux-x86_64.tar.xz
 install:
-- export TAG=$(sed -n 's/.*[lede,openwrt]-sdk.*-\(.*\)-.*_gcc.*/\1/p' <<< $SDK_URL | awk -F- '{print $1}')
+- export TAG=$(sed -n 's/.*[lede,openwrt]-sdk-[0-9.-]*\(\w*\).*_gcc.*/\1/p' <<< $SDK_URL | awk -F- '{print $1}')
 - wget $SDK_URL
 - tar xf $(basename $SDK_URL)
 - cd *$TAG*
