--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,13 +12,13 @@ jobs:
       fail-fast: false
       matrix:
         SDK_URL:
-        - https://downloads.openwrt.org/releases/18.06.4/targets/ipq806x/generic/openwrt-sdk-18.06.4-ipq806x_gcc-7.3.0_musl_eabi.Linux-x86_64.tar.xz
-        - https://downloads.openwrt.org/releases/18.06.4/targets/ipq40xx/generic/openwrt-sdk-18.06.4-ipq40xx_gcc-7.3.0_musl_eabi.Linux-x86_64.tar.xz
-        - https://downloads.openwrt.org/releases/18.06.4/targets/ar71xx/generic/openwrt-sdk-18.06.4-ar71xx-generic_gcc-7.3.0_musl.Linux-x86_64.tar.xz
-        - https://downloads.openwrt.org/releases/18.06.4/targets/ramips/mt7621/openwrt-sdk-18.06.4-ramips-mt7621_gcc-7.3.0_musl.Linux-x86_64.tar.xz
+        - https://downloads.openwrt.org/releases/19.07.0-rc1/targets/ipq806x/generic/openwrt-sdk-19.07.0-rc1-ipq806x-generic_gcc-7.4.0_musl_eabi.Linux-x86_64.tar.xz
+        - https://downloads.openwrt.org/releases/19.07.0-rc1/targets/ipq40xx/generic/openwrt-sdk-19.07.0-rc1-ipq40xx-generic_gcc-7.4.0_musl_eabi.Linux-x86_64.tar.xz
+        - https://downloads.openwrt.org/releases/19.07.0-rc1/targets/ar71xx/generic/openwrt-sdk-19.07.0-rc1-ar71xx-generic_gcc-7.4.0_musl.Linux-x86_64.tar.xz
+        - https://downloads.openwrt.org/releases/19.07.0-rc1/targets/ramips/mt7621/openwrt-sdk-19.07.0-rc1-ramips-mt7621_gcc-7.4.0_musl.Linux-x86_64.tar.xz
     steps:
     - name: Env for Openwrt SDK
-      run: sudo apt install -y libev-dev libc-ares-dev libudns-dev
+      run: sudo apt install -y libev-dev libc-ares-dev libudns-dev libncurses-dev
     - name: Download Openwrt SDK
       env:
         SDK_URL: ${{ matrix.SDK_URL }}
@@ -50,15 +50,15 @@ jobs:
         # NFS
         git clone https://github.com/simonsmh/luci-app-nfs package/luci-app-nfs
         # V2Ray
-        git clone https://github.com/kuoruan/openwrt-v2ray package/v2ray
+        git clone https://github.com/kuoruan/openwrt-v2ray package/v2ray-core
         git clone https://github.com/kuoruan/luci-app-v2ray package/luci-app-v2ray
         # V2Ray-Plugin
         git clone https://github.com/honwen/openwrt-v2ray-plugin package/v2ray-plugin
         # Dependency
-        # git clone https://github.com/shadowsocks/openwrt-feeds package/custom
+        git clone https://github.com/shadowsocks/openwrt-feeds package/custom
         pushd package/openwrt-dist-luci/tools/po2lmo ; make && sudo make install ; popd
         ./scripts/feeds update -a
-        ./scripts/feeds install libopenssl libmbedtls libcares libev libsodium pcre
+        ./scripts/feeds install golang #c-ares libev libsodium mbedtls pcre
     - name: Compile
       env:
         SDK_URL: ${{ matrix.SDK_URL }}
@@ -67,7 +67,7 @@ jobs:
         #
         cd $SDK_HOME
         make defconfig
-        make prereq V=s
+        # make prereq V=s
         # Compile packages
         make package/luci-app-shadowsocks/compile V=s
         make package/shadowsocks-libev/compile V=s
@@ -81,9 +81,9 @@ jobs:
         make package/luci-app-vlmcsd/compile V=s
         make package/luci-app-transparent-proxy/compile V=s
         make package/luci-app-nfs/compile V=s
-        make package/v2ray V=s
-        make package/luci-app-v2ray V=s
-        make package/v2ray-plugin V=s
+        make package/v2ray-core/compile V=s
+        make package/luci-app-v2ray/compile V=s
+        make package/v2ray-plugin/compile V=s
         # Generate packages.gz
         ./staging_dir/host/bin/usign -G -s ./key-build -p ./key-build.pub -c "Local build key"
         make package/index V=s
@@ -93,7 +93,7 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.TOKEN }}
       run: |
         SDK_HOME=$(head -c -8 <<< $(basename $SDK_URL))
-        TAG=$(sed -n 's/.*[lede,openwrt]-sdk-[0-9.]*[\-rc\d-]*-\(\w*\).*_gcc.*/\1/p' <<< $SDK_URL)
+        TAG=$(sed -n 's/.*targets\/\(\w*\)\/.*/\1/p' <<< $SDK_URL)
         #
         cd $SDK_HOME/bin
         git init
