--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,10 +13,10 @@ jobs:
       fail-fast: false
       matrix:
         SDK_URL:
-        - https://downloads.openwrt.org/releases/19.07.0-rc2/targets/ipq806x/generic/openwrt-sdk-19.07.0-rc2-ipq806x-generic_gcc-7.5.0_musl_eabi.Linux-x86_64.tar.xz
-        - https://downloads.openwrt.org/releases/19.07.0-rc2/targets/ipq40xx/generic/openwrt-sdk-19.07.0-rc2-ipq40xx-generic_gcc-7.5.0_musl_eabi.Linux-x86_64.tar.xz
-        - https://downloads.openwrt.org/releases/19.07.0-rc2/targets/ar71xx/generic/openwrt-sdk-19.07.0-rc2-ar71xx-generic_gcc-7.5.0_musl.Linux-x86_64.tar.xz
-        - https://downloads.openwrt.org/releases/19.07.0-rc2/targets/ramips/mt7621/openwrt-sdk-19.07.0-rc2-ramips-mt7621_gcc-7.5.0_musl.Linux-x86_64.tar.xz
+        - https://downloads.openwrt.org/releases/19.07.0/targets/ipq806x/generic/openwrt-sdk-19.07.0-ipq806x-generic_gcc-7.5.0_musl_eabi.Linux-x86_64.tar.xz
+        - https://downloads.openwrt.org/releases/19.07.0/targets/ipq40xx/generic/openwrt-sdk-19.07.0-ipq40xx-generic_gcc-7.5.0_musl_eabi.Linux-x86_64.tar.xz
+        - https://downloads.openwrt.org/releases/19.07.0/targets/ar71xx/generic/openwrt-sdk-19.07.0-ar71xx-generic_gcc-7.5.0_musl.Linux-x86_64.tar.xz
+        - https://downloads.openwrt.org/releases/19.07.0/targets/ramips/mt7621/openwrt-sdk-19.07.0-ramips-mt7621_gcc-7.5.0_musl.Linux-x86_64.tar.xz
     steps:
     - uses: actions/checkout@master
     - name: Env for Openwrt SDK
@@ -97,13 +97,13 @@ jobs:
         PROFILE: [netgear_r7800, qihoo-c301, asus_rt-ac58u]
         include:
         - PROFILE: netgear_r7800
-          IB_URL: https://downloads.openwrt.org/releases/19.07.0-rc2/targets/ipq806x/generic/openwrt-imagebuilder-19.07.0-rc2-ipq806x-generic.Linux-x86_64.tar.xz
+          IB_URL: https://downloads.openwrt.org/releases/19.07.0/targets/ipq806x/generic/openwrt-imagebuilder-19.07.0-ipq806x-generic.Linux-x86_64.tar.xz
           PACKAGES: ca-bundle ca-certificates libustream-mbedtls block-mount coreutils coreutils-base64 curl iperf3 ip-full iptables-mod-tproxy kmod-usb-storage-extras libmbedtls luci luci-app-samba luci-app-shadowsocks luci-i18n-base-zh-cn luci-i18n-firewall-zh-cn luci-i18n-samba-zh-cn mount-utils shadowsocks-libev stubby uhttpd bind-dig iperf3 mtr htop wpad-openssl -wpad-basic
         - PROFILE: qihoo-c301
-          IB_URL: https://downloads.openwrt.org/releases/19.07.0-rc2/targets/ar71xx/generic/openwrt-imagebuilder-19.07.0-rc2-ar71xx-generic.Linux-x86_64.tar.xz
+          IB_URL: https://downloads.openwrt.org/releases/19.07.0/targets/ar71xx/generic/openwrt-imagebuilder-19.07.0-ar71xx-generic.Linux-x86_64.tar.xz
           PACKAGES: ca-bundle ca-certificates libustream-mbedtls block-mount coreutils coreutils-base64 curl iperf3 ip-full iptables-mod-tproxy kmod-usb-storage-extras kmod-ipt-nat6 libmbedtls luci luci-app-samba luci-app-shadowsocks luci-i18n-base-zh-cn luci-i18n-firewall-zh-cn luci-i18n-samba-zh-cn mount-utils shadowsocks-libev stubby uhttpd bind-dig iperf3 mtr htop
         - PROFILE: asus_rt-ac58u
-          IB_URL: https://downloads.openwrt.org/releases/19.07.0-rc2/targets/ipq40xx/generic/openwrt-imagebuilder-19.07.0-rc2-ipq40xx-generic.Linux-x86_64.tar.xz
+          IB_URL: https://downloads.openwrt.org/releases/19.07.0/targets/ipq40xx/generic/openwrt-imagebuilder-19.07.0-ipq40xx-generic.Linux-x86_64.tar.xz
           PACKAGES: ca-bundle ca-certificates libustream-mbedtls block-mount coreutils coreutils-base64 curl iperf3 ip-full iptables-mod-tproxy kmod-usb-storage-extras kmod-ipt-nat6 libmbedtls luci luci-app-samba luci-app-shadowsocks luci-i18n-base-zh-cn luci-i18n-firewall-zh-cn luci-i18n-samba-zh-cn mount-utils shadowsocks-libev stubby uhttpd bind-dig iperf3 mtr htop wpad-openssl -wpad-basic kmod-ath10k -kmod-ath10k-ct ath10k-firmware-qca4019 -ath10k-firmware-qca4019-ct
     steps:
     - uses: actions/checkout@master
