--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -98,13 +98,13 @@ jobs:
         include:
         - PROFILE: netgear_r7800
           IB_URL: https://downloads.openwrt.org/releases/19.07.0/targets/ipq806x/generic/openwrt-imagebuilder-19.07.0-ipq806x-generic.Linux-x86_64.tar.xz
-          PACKAGES: ca-bundle ca-certificates libustream-mbedtls block-mount coreutils coreutils-base64 curl iperf3 ip-full iptables-mod-tproxy kmod-usb-storage-extras libmbedtls luci luci-app-samba luci-app-shadowsocks luci-i18n-base-zh-cn luci-i18n-firewall-zh-cn luci-i18n-samba-zh-cn mount-utils shadowsocks-libev stubby uhttpd bind-dig iperf3 mtr htop wpad-openssl -wpad-basic
+          PACKAGES: ca-bundle ca-certificates libustream-mbedtls block-mount coreutils coreutils-base64 curl iperf3 ip-full iptables-mod-tproxy kmod-usb-storage-extras kmod-ipt-nat6 libmbedtls luci luci-app-samba luci-app-shadowsocks luci-app-smartdns luci-i18n-base-zh-cn luci-i18n-firewall-zh-cn luci-i18n-samba-zh-cn luci-i18n-smartdns-zh-cn mount-utils shadowsocks-libev smartdns uhttpd bind-dig knot-dig iperf3 mtr htop wpad-openssl -wpad-basic
         - PROFILE: qihoo-c301
           IB_URL: https://downloads.openwrt.org/releases/19.07.0/targets/ar71xx/generic/openwrt-imagebuilder-19.07.0-ar71xx-generic.Linux-x86_64.tar.xz
-          PACKAGES: ca-bundle ca-certificates libustream-mbedtls block-mount coreutils coreutils-base64 curl iperf3 ip-full iptables-mod-tproxy kmod-usb-storage-extras kmod-ipt-nat6 libmbedtls luci luci-app-samba luci-app-shadowsocks luci-i18n-base-zh-cn luci-i18n-firewall-zh-cn luci-i18n-samba-zh-cn mount-utils shadowsocks-libev stubby uhttpd bind-dig iperf3 mtr htop
+          PACKAGES: ca-bundle ca-certificates libustream-mbedtls block-mount coreutils coreutils-base64 curl iperf3 ip-full iptables-mod-tproxy kmod-usb-storage-extras kmod-ipt-nat6 libmbedtls luci luci-app-samba luci-app-shadowsocks luci-app-smartdns luci-i18n-base-zh-cn luci-i18n-firewall-zh-cn luci-i18n-samba-zh-cn luci-i18n-smartdns-zh-cn mount-utils shadowsocks-libev smartdns uhttpd bind-dig knot-dig iperf3 mtr htop
         - PROFILE: asus_rt-ac58u
           IB_URL: https://downloads.openwrt.org/releases/19.07.0/targets/ipq40xx/generic/openwrt-imagebuilder-19.07.0-ipq40xx-generic.Linux-x86_64.tar.xz
-          PACKAGES: ca-bundle ca-certificates libustream-mbedtls block-mount coreutils coreutils-base64 curl iperf3 ip-full iptables-mod-tproxy kmod-usb-storage-extras kmod-ipt-nat6 libmbedtls luci luci-app-samba luci-app-shadowsocks luci-i18n-base-zh-cn luci-i18n-firewall-zh-cn luci-i18n-samba-zh-cn mount-utils shadowsocks-libev stubby uhttpd bind-dig iperf3 mtr htop wpad-openssl -wpad-basic kmod-ath10k -kmod-ath10k-ct ath10k-firmware-qca4019 -ath10k-firmware-qca4019-ct
+          PACKAGES: ca-bundle ca-certificates libustream-mbedtls block-mount coreutils coreutils-base64 curl iperf3 ip-full iptables-mod-tproxy kmod-usb-storage-extras kmod-ipt-nat6 libmbedtls luci luci-app-samba luci-app-shadowsocks luci-app-smartdns luci-i18n-base-zh-cn luci-i18n-firewall-zh-cn luci-i18n-samba-zh-cn luci-i18n-smartdns-zh-cn mount-utils shadowsocks-libev smartdns uhttpd bind-dig knot-dig iperf3 mtr htop wpad-openssl -wpad-basic 
     steps:
     - uses: actions/checkout@master
     - name: Env for Openwrt ImageBuilder
@@ -125,9 +125,13 @@ jobs:
         TAG=$(echo $IB_URL | sed -n 's/.*targets\/\(\w*\)\/.*/\1/p')
         cd $IB_HOME
         mkdir -p files/root/
+        mkdir -p files/etc/opkg/
+        mkdir -p files/etc/smartdns/
         cp ../simonsmh-dist.pub files/root/
         wget https://github.com/SYHGroup/easy_shell/raw/master/ddns/CloudFlare-ddns.sh -O files/root/CloudFlare-ddns.sh
         wget https://github.com/SYHGroup/easy_shell/raw/master/sss/update_list -O files/root/update_list
+        wget https://gist.githubusercontent.com/simonsmh/2a609e0c801acabc2e1d7733432bce4c/raw/blacklist-ip.conf -O files/etc/smartdns/blacklist-ip.conf
+        echo "src/gz simonsmh https://github.com/simonsmh/openwrt-dist/raw/$TAG" > files/etc/opkg/customfeeds.conf
         echo "src/gz simonsmh https://github.com/simonsmh/openwrt-dist/raw/$TAG" >> repositories.conf
         TERM=xterm-256color make image PROFILE="$PROFILE" PACKAGES="$PACKAGES" FILES=files/
     - name: Upload
